Latest cc, ring 0.17, macos, cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,6 @@ jobs:
 
       - name: Lipo macos
         run: |
+          cargo build --target aarch64-apple-darwin
           cargo build --target x86_64-apple-darwin
           lipo -archs target/x86_64-apple-darwin/debug/librepro.a
