--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,20 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ring = "0.17.8"
-cc = "=1.0.89"
+aws-lc-rs = { version = "1.9.0", features = ["bindgen"]}
+ring = "0.17"
+uniffi = { version = "0.28.1", features = ["cli"] }
+# cc = "=1.0.89"
 
 [lib]
 name = "repro"
-crate-type = ["staticlib"]
+crate-type = ["staticlib","cdylib"]
+
+[[bin]]
+name = "uniffi-bindgen"
+path = "src/uniffi-bindgen.rs"
+
+[profile.release]
+panic = "abort"
+lto = true
+strip = true
