switch xcode version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,9 @@ jobs:
     # aarch64 runner
     runs-on: macos-14
     steps:
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '15.0.1'
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
@@ -22,6 +25,7 @@ jobs:
 
       - name: Lipo macos
         run: |
+          xcodebuild -version
           cargo rustc --target=aarch64-apple-darwin --crate-type=staticlib --profile=release --lib
           cargo rustc --target=x86_64-apple-darwin --crate-type=staticlib --profile=release --lib
 
