Try old bindgen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 # aws-lc-rs = { version = "1.9.0", features = ["bindgen"]}
 ring = "0.17"
 tracing = "0.1.40"
-tracing-oslog = "0.2.0"
+tracing-oslog = "0.1.0"
 tracing-subscriber = "0.3.18"
 uniffi = { version = "0.28.1", features = ["cli"] }
+bindgen = { version = "=0.69.4"}
 # cc = "=1.0.89"
 
 # [lib]
