--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,6 @@
-[package]
-name = "repro"
-version = "0.1.0"
+[workspace]
+resolver = "2"
+members = ["crates/*"]
+
+[workspace.package]
 edition = "2021"
-
-[dependencies]
-ring = "0.17.8"
-cc = "=1.0.89"
-
-[lib]
-name = "repro"
-crate-type = ["staticlib"]
