--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     # aarch64 runner
     runs-on: macos-14
     env:
-      SCCACHE_GHA_ENABLED: "true"
+      # SCCACHE_GHA_ENABLED: "true"
       RUSTC_WRAPPER: "sccache"
       CC_ENABLE_DEBUG_OUTPUT: "1"
     steps:
