--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,14 @@ jobs:
     # aarch64 runner
     runs-on: macos-14
     env:
+      # Disabling Ghithub Action mode trigger the bug.
       # SCCACHE_GHA_ENABLED: "true"
       RUSTC_WRAPPER: "sccache"
       CC_ENABLE_DEBUG_OUTPUT: "1"
     steps:
       - uses: mozilla-actions/sccache-action@v0.0.5
-        # with:
-        #   version: "v0.7.4" 
+        with:
+          version: "v0.7.4"
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '15.0.1'
